Guodian: update guodian app.